--- a/curs4/cookies/src/views/home.ejs
+++ b/curs4/cookies/src/views/home.ejs
@@ -9,7 +9,7 @@
     <body>
         <div class="welcome">
             <h4>
-                Hello there, welcome.
+               dsdfsdfsfds.
             </h4>
             <%if(locals.username){%>
             <p>You are logged in as <%=username%></p>
